Added basic routing and navigation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,9 @@
     "resolveJsonModule": true,
     "paths": {
       "@app/*": ["src/app/*"],
-      "@assets/*": ["node_modules/@patternfly/react-core/dist/styles/assets/*"]
-    },
+      "@assets/*": ["node_modules/@patternfly/react-core/dist/styles/assets/*"],
+      "@images/*": ["public/images/*"]
+    }
   },
   "include": [
     "**/*.ts",
