--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "imagemin": "^7.0.0",
-    "jest": "^24.1.0",
+    "jest": "^24.9.0",
     "jest-junit": "^8.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -44,6 +44,7 @@
     "react": "^16.8.4",
     "react-axe": "^3.0.2",
     "react-dom": "^16.6.3",
+    "react-svg-loader": "^3.0.3",
     "regenerator-runtime": "^0.13.3",
     "rimraf": "^3.0.0",
     "style-loader": "^1.0.0",
@@ -65,9 +66,9 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "@patternfly/react-core": "^3.77.2",
-    "@patternfly/react-icons": "^3.10.15",
-    "@patternfly/react-styles": "^3.5.7",
+    "@patternfly/react-core": "^3.104.0",
+    "@patternfly/react-icons": "^3.14.3",
+    "@patternfly/react-styles": "^3.5.22",
     "react-router-dom": "^5.0.1",
     "react-router-last-location": "^2.0.1"
   }
