--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "clean": "rimraf dist"
   },
   "devDependencies": {
+    "@testing-library/react": "^9.1.4",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/fetch-mock": "^7.3.1",
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.8",
     "@types/react": "^16.9.3",
@@ -31,19 +33,22 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-to-json": "^3.4.0",
+    "fetch-mock": "^7.3.9",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "imagemin": "^7.0.0",
     "jest": "^24.9.0",
+    "jest-fetch-mock": "^2.1.2",
     "jest-junit": "^8.0.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "node-fetch": "^2.6.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^1.15.2",
     "prop-types": "^15.6.1",
     "raw-loader": "^3.1.0",
-    "react": "^16.8.4",
     "react-axe": "^3.3.0",
     "react-dom": "^16.10.1",
+    "react": "^16.9.0",
     "react-svg-loader": "^3.0.3",
     "regenerator-runtime": "^0.13.3",
     "rimraf": "^3.0.0",
@@ -70,6 +75,7 @@
     "@patternfly/react-icons": "^3.14.7",
     "@patternfly/react-styles": "^3.5.22",
     "dotenv-webpack": "^1.7.0",
+    "easy-peasy": "^3.0.2",
     "keycloak-js": "6.0.1",
     "react-keycloak": "^6.1.0",
     "react-router-dom": "^5.1.0",
