--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "prettier": "^1.15.2",
     "prop-types": "^15.6.1",
     "raw-loader": "^3.1.0",
+    "react": "^16.9.0",
     "react-axe": "^3.3.0",
     "react-dom": "^16.10.1",
-    "react": "^16.9.0",
     "react-svg-loader": "^3.0.3",
     "regenerator-runtime": "^0.13.3",
     "rimraf": "^3.0.0",
@@ -77,6 +77,7 @@
     "dotenv-webpack": "^1.7.0",
     "easy-peasy": "^3.0.2",
     "keycloak-js": "6.0.1",
+    "lodash": "^4.17.15",
     "react-keycloak": "^6.1.0",
     "react-router-dom": "^5.1.0",
     "react-router-last-location": "^2.0.1"
