--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@patternfly/react-core": "^3.112.1",
     "@patternfly/react-icons": "^3.14.7",
     "@patternfly/react-styles": "^3.5.22",
+    "@patternfly/react-table": "^2.22.19",
     "dotenv-webpack": "^1.7.0",
     "easy-peasy": "^3.0.2",
     "keycloak-js": "6.0.1",
