--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "easy-peasy": "^3.1.0",
     "keycloak-js": "6.0.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react-keycloak": "^6.1.1",
     "react-router-dom": "^5.1.2",
     "react-router-last-location": "^2.0.1"
