Issue/workflow testing (#52)
* Add cypress

* Run cypress in docker container

* Add screenshot reports to gitignore

* Rename cypress runner command

* Fix syntax error in Jenkinsfile

* Match routes of backend requests in tests

* Don't record videos and use junit reports

* Save screenshots on failure

* Add cypress to readme

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,11 @@ typings/
 # next.js build output
 .next
 
+# cypress reports
+cypress/reports/
+cypress/videos/
+cypress/screenshots/
+
 dist
 yarn-error.log
 stats.json
