--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "format": "prettier --check --write ./src/**/*.{tsx,ts,js}",
     "build:bundle-profile": "webpack --config webpack.prod.js --profile --json > stats.json",
     "bundle-profile:analyze": "yarn build:bundle-profile && webpack-bundle-analyzer ./stats.json",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "delete:reports": "rm -r cypress/reports/* || true",
+    "precypress-test": "yarn run delete:reports",
+    "cypress-test": "yarn start-test 'yarn start' http-get://localhost:9000 'cypress run'"
   },
   "devDependencies": {
     "@testing-library/react": "^9.1.4",
@@ -30,6 +33,8 @@
     "@types/victory": "^33.0.0",
     "@types/webpack": "^4.39.2",
     "css-loader": "^3.2.0",
+    "cypress": "^3.4.1",
+    "cypress-multi-reporters": "^1.2.3",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-to-json": "^3.4.0",
@@ -41,6 +46,10 @@
     "jest-fetch-mock": "^2.1.2",
     "jest-junit": "^8.0.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "mocha": "^6.2.2",
+    "mocha-junit-reporter": "^1.23.1",
+    "mochawesome": "^4.1.0",
+    "mochawesome-report-generator": "^4.0.1",
     "node-fetch": "^2.6.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^1.15.2",
@@ -52,6 +61,7 @@
     "react-svg-loader": "^3.0.3",
     "regenerator-runtime": "^0.13.3",
     "rimraf": "^3.0.0",
+    "start-server-and-test": "^1.10.6",
     "style-loader": "^1.0.0",
     "svg-url-loader": "^3.0.2",
     "ts-jest": "^24.1.0",
