--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-router-dom": "^5.1.0",
     "@types/victory": "^33.0.0",
     "@types/webpack": "^4.39.2",
+    "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
     "cypress": "^3.4.1",
     "cypress-multi-reporters": "^1.2.3",
