--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "prettier": "^1.15.2",
     "prop-types": "^15.6.1",
     "raw-loader": "^3.1.0",
-    "react": "^16.10.1",
-    "react-axe": "^3.3.0",
-    "react-dom": "^16.10.1",
+    "react": "^16.13.1",
+    "react-axe": "3.3.0",
+    "react-dom": "^16.13.1",
     "react-svg-loader": "^3.0.3",
     "regenerator-runtime": "^0.13.3",
     "rimraf": "^3.0.0",
