--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/react-router-dom": "^5.1.0",
     "@types/victory": "^33.0.0",
     "@types/webpack": "^4.39.2",
-    "copy-webpack-plugin": "^5.0.5",
+    "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^3.2.0",
     "cypress": "^4.3.0",
     "cypress-multi-reporters": "^1.2.3",
@@ -80,7 +80,7 @@
     "tslint-react-hooks": "^2.2.1",
     "typescript": "^3.6.3",
     "url-loader": "^2.1.0",
-    "webpack": "^4.41.0",
+    "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "^3.5.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1",
@@ -99,5 +99,8 @@
     "react-keycloak": "^6.1.1",
     "react-router-dom": "^5.1.2",
     "react-router-last-location": "^2.0.1"
+  },
+  "resolutions": {
+    "terser-webpack-plugin": "^1.4.5"
   }
 }
