--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-router-last-location": "^2.0.1"
   },
   "resolutions": {
-    "terser-webpack-plugin": "^1.4.5"
+    "terser-webpack-plugin": "^1.4.5",
+    "selfsigned": "^1.10.8"
   }
 }
