--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prebuild": "yarn clean",
     "build": "webpack --config webpack.prod.js",
     "start": "webpack-dev-server --hot --color --progress --info=true --config webpack.dev.js",
+    "start-dont-watch": "webpack-dev-server --color --progress --info=true --config webpack.dev.js",
     "test": "jest",
     "lint": "tslint -c ./tslint.json --project .",
     "format": "prettier --check --write ./src/**/*.{tsx,ts,js}",
@@ -17,7 +18,7 @@
     "clean": "rimraf dist",
     "delete:reports": "rm -r cypress/reports/* || true",
     "precypress-test": "yarn run delete:reports",
-    "cypress-test": "yarn start-test 'yarn start' http-get://localhost:9000 'cypress run'",
+    "cypress-test": "yarn start-test 'yarn start-dont-watch' http-get://localhost:9000 'yarn cypress run'",
     "package-cleanup": "node clean_up_packages"
   },
   "publishConfig": {
