--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "webpack-dev-server --hot --color --progress --info=true --config webpack.dev.js",
     "test": "jest",
     "lint": "tslint -c ./tslint.json --project .",
-    "format": "prettier --check --write ./src/**/*.{tsx,ts,js}",
+    "format": "prettier --check --write './**/*.{js,jsx,ts,tsx}'",
     "build:bundle-profile": "webpack --config webpack.prod.js --profile --json > stats.json",
     "bundle-profile:analyze": "yarn build:bundle-profile && webpack-bundle-analyzer ./stats.json",
     "clean": "rimraf dist",
