--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "build": "webpack --config webpack.prod.js",
     "start": "webpack-dev-server --hot --color --progress --info=true --config webpack.dev.js",
     "test": "jest",
-    "lint": "tslint -c ./tslint.json --project .",
     "format": "prettier --check --write './**/*.{js,jsx,ts,tsx}'",
-    "lint:es": "eslint '*/**/*.{js,jsx,ts,tsx}'",
-    "lint:es:fix": "eslint '*/**/*.{js,jsx,ts,tsx}' --quiet --fix",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "eslint './**/*.{js,jsx,ts,tsx}' --quiet --fix",
     "build:bundle-profile": "webpack --config webpack.prod.js --profile --json > stats.json",
     "bundle-profile:analyze": "yarn build:bundle-profile && webpack-bundle-analyzer ./stats.json",
     "clean": "rimraf dist",
@@ -82,11 +81,6 @@
     "ts-jest": "^26.3.0",
     "ts-loader": "^6.2.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "tslint": "^5.20.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^4.1.0",
-    "tslint-react-hooks": "^2.2.1",
     "typescript": "^3.6.3",
     "url-loader": "^2.1.0",
     "webpack": "^4.44.1",
