--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "start": "webpack-dev-server --hot --color --progress --info=true --config webpack.dev.js",
     "test": "jest",
     "format": "prettier --check --write './**/*.{js,jsx,ts,tsx}'",
-    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "eslint './**/*.{js,jsx,ts,tsx}' --quiet --fix",
+    "lint": "eslint --max-warnings=0 './**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "eslint --max-warnings=0 './**/*.{js,jsx,ts,tsx}' --quiet --fix",
     "build:bundle-profile": "webpack --config webpack.prod.js --profile --json > stats.json",
     "bundle-profile:analyze": "yarn build:bundle-profile && webpack-bundle-analyzer ./stats.json",
     "clean": "rimraf dist",
