--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "build": "webpack --config webpack.prod.js",
     "start": "webpack-dev-server --hot --color --progress --info=true --config webpack.dev.js",
     "test": "jest",
-    "lint": "tslint -c ./tslint.json --project .",
     "format": "prettier --check --write './**/*.{js,jsx,ts,tsx}'",
+    "lint": "eslint --max-warnings=0 './**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "eslint --max-warnings=0 './**/*.{js,jsx,ts,tsx}' --quiet --fix",
     "build:bundle-profile": "webpack --config webpack.prod.js --profile --json > stats.json",
     "bundle-profile:analyze": "yarn build:bundle-profile && webpack-bundle-analyzer ./stats.json",
     "clean": "rimraf dist",
@@ -38,6 +39,8 @@
     "@types/react-router-dom": "^5.1.0",
     "@types/victory": "^33.0.0",
     "@types/webpack": "^4.39.2",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
     "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^3.2.0",
     "cypress": "^4.3.0",
@@ -45,6 +48,10 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-to-json": "^3.4.0",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "fetch-mock": "^7.3.9",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
@@ -74,11 +81,6 @@
     "ts-jest": "^26.3.0",
     "ts-loader": "^6.2.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "tslint": "^5.20.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^4.1.0",
-    "tslint-react-hooks": "^2.2.1",
     "typescript": "^3.6.3",
     "url-loader": "^2.1.0",
     "webpack": "^4.44.1",
