--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "webpack-dev-server --hot --color --progress --info=true --config webpack.dev.js",
     "test": "jest",
     "format": "prettier --check --write './**/*.{js,jsx,ts,tsx}'",
+    "format:check": "prettier --check './**/*.{js,jsx,ts,tsx}'",
     "lint": "eslint --max-warnings=0 './**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint --max-warnings=0 './**/*.{js,jsx,ts,tsx}' --quiet --fix",
     "build:bundle-profile": "webpack --config webpack.prod.js --profile --json > stats.json",
@@ -20,6 +21,17 @@
     "precypress-test": "yarn run delete:reports",
     "cypress-test": "yarn start-test 'yarn start' http-get://localhost:9000 'yarn cypress run'",
     "package-cleanup": "node clean_up_packages"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --max-warnings=0",
+      "prettier --check --write"
+    ]
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -55,10 +67,12 @@
     "fetch-mock": "^7.3.9",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^4.3.7",
     "imagemin": "^7.0.0",
     "jest": "^26.4.2",
     "jest-fetch-mock": "^2.1.2",
     "jest-junit": "^8.0.0",
+    "lint-staged": "^10.5.3",
     "mini-css-extract-plugin": "^0.8.0",
     "mocha": "^6.2.2",
     "mocha-junit-reporter": "^1.23.1",
