Add Created & Updated to InventoryTable
- Add typescript babel plugin to storybook

- Add more fixtures

- Add more tests for RowPresenter

--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-typescript": "^7.12.1",
     "@storybook/addon-actions": "^6.1.14",
     "@storybook/addon-essentials": "^6.1.14",
     "@storybook/addon-links": "^6.1.14",
     "@storybook/react": "^6.1.14",
-    "@testing-library/react": "^11.2.3",
     "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.3",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/fetch-mock": "^7.3.1",
