--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-typescript": "^7.12.1",
     "@storybook/addon-actions": "^6.1.14",
     "@storybook/addon-essentials": "^6.1.14",
     "@storybook/addon-links": "^6.1.14",
     "@storybook/react": "^6.1.14",
+    "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
@@ -102,7 +104,7 @@
     "svg-url-loader": "^3.0.2",
     "ts-jest": "^26.3.0",
     "ts-loader": "^6.2.0",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^3.6.3",
     "url-loader": "^2.1.0",
     "webpack": "^4.44.1",
