Make absolute wildcard import more strict

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "@app/*": ["src/app/*"],
       "@assets/*": ["node_modules/@patternfly/react-core/dist/styles/assets/*"],
       "@images/*": ["public/images/*"],
-      "*": ["src/*"]
+      "@/*": ["src/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.jsx", "jestSetupAfterEnv.js"],
