--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/react": "^16.9.4",
     "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^5.1.0",
+    "@types/styled-components": "^5.1.7",
     "@types/victory": "^33.0.0",
     "@types/webpack": "^4.39.2",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
@@ -127,7 +128,8 @@
     "moment": "^2.24.0",
     "react-keycloak": "^6.1.1",
     "react-router-dom": "^5.1.2",
-    "react-router-last-location": "^2.0.1"
+    "react-router-last-location": "^2.0.1",
+    "styled-components": "^5.2.1"
   },
   "resolutions": {
     "terser-webpack-plugin": "^1.4.5",
