--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/react": "^16.9.4",
     "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^5.1.0",
+    "@types/styled-components": "^5.1.7",
     "@types/victory": "^33.0.0",
     "@types/webpack": "^4.39.2",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
@@ -72,8 +73,10 @@
     "enzyme-to-json": "^3.4.0",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-jest-dom": "^3.6.5",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-testing-library": "^3.10.1",
     "fetch-mock": "^7.3.9",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
@@ -127,7 +130,8 @@
     "moment": "^2.24.0",
     "react-keycloak": "^6.1.1",
     "react-router-dom": "^5.1.2",
-    "react-router-last-location": "^2.0.1"
+    "react-router-last-location": "^2.0.1",
+    "styled-components": "^5.2.1"
   },
   "resolutions": {
     "terser-webpack-plugin": "^1.4.5",
