--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "svg-url-loader": "^3.0.2",
     "ts-jest": "^26.3.0",
     "ts-loader": "^6.2.0",
+    "ts-prune": "^0.8.8",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^3.6.3",
     "url-loader": "^2.1.0",
