--- a/changelogs/unreleased/lsm-294-instance-state-without-label.yml
+++ b/changelogs/unreleased/lsm-294-instance-state-without-label.yml
@@ -1,6 +1,7 @@
 description: Add support for service instance state without a label
 issue-repo: lsm
 issue-nr: 294
+change-type: patch
 destination-branches:
   - master
   - iso4
