--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/fetch-mock": "^7.3.1",
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.8",
+    "@types/qs": "^6.9.6",
     "@types/react": "^16.9.4",
     "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^5.1.0",
@@ -131,6 +132,7 @@
     "keycloak-js": "6.0.1",
     "lodash": "^4.17.19",
     "moment": "^2.24.0",
+    "qs": "^6.10.1",
     "react-keycloak": "^6.1.1",
     "react-router-dom": "^5.1.2",
     "react-router-last-location": "^2.0.1",
