--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/webpack": "^4.39.2",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^3.2.0",
@@ -131,6 +132,7 @@
     "react-keycloak": "^6.1.1",
     "react-router-dom": "^5.1.2",
     "react-router-last-location": "^2.0.1",
+    "react-syntax-highlighter": "^15.4.3",
     "styled-components": "^5.2.1"
   },
   "resolutions": {
