Process review comments

--- a/changelogs/unreleased/333-diagnose-ui.yml
+++ b/changelogs/unreleased/333-diagnose-ui.yml
@@ -1,4 +1,4 @@
-description: Updated UI for Diagnose feature
+description: Update UI for Diagnose feature
 issue-nr: 333
 change-type: minor
 destination-branches: [master, iso4]
