--- a/changelogs/unreleased/architecture-docs.yaml
+++ b/changelogs/unreleased/architecture-docs.yaml
@@ -1,3 +1,3 @@
-description: Add architecture documentation
+description: Add first part of architecture documentation
 change-type: patch
 destination-branches: [master, iso4]
