Fix changelog entry

--- a/changelogs/unreleased/286-env-selector-refactor.yml
+++ b/changelogs/unreleased/286-env-selector-refactor.yml
@@ -1,6 +1,4 @@
 description: Refactor Environment Selector to use the new data fetching mechanism
 issue-nr: 286
-change-type: minor
+change-type: patch
 destination-branches: [master, iso4]
-sections:
-  feature: "{{description}}"
