--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prepare": "husky install",
     "prebuild": "yarn clean",
     "build": "webpack --config webpack.prod.js",
-    "start": "webpack-dev-server --hot --color --progress --info=true --config webpack.dev.js",
+    "start": "webpack serve --hot --color --progress --config webpack.dev.js",
     "test": "jest",
     "format": "prettier --check --write './**/*.{js,jsx,ts,tsx}'",
     "format:check": "prettier --check './**/*.{js,jsx,ts,tsx}'",
@@ -74,7 +74,7 @@
     "eslint-plugin-testing-library": "^4.5.0",
     "fetch-mock": "^9.11.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.3.1",
     "husky": "^6.0.0",
     "imagemin": "^8.0.0",
     "jest": "^26.4.2",
@@ -106,9 +106,9 @@
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.2.4",
     "url-loader": "^4.1.1",
-    "webpack": "^4.44.1",
+    "webpack": "^5.37.1",
     "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^3.3.9",
+    "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
   },
@@ -125,6 +125,7 @@
     "keycloak-js": "6.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.24.0",
+    "process": "^0.11.10",
     "qs": "^6.10.1",
     "react-keycloak": "^6.1.1",
     "react-router-dom": "^5.2.0",
