--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "keycloak-js": "6.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "qs": "^6.10.1",
     "react-keycloak": "^6.1.1",
     "react-router-dom": "^5.2.0",
