--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "@types/styled-components": "^5.1.10",
     "@types/victory": "^33.0.0",
     "@types/webpack": "^5.28.0",
-    "@typescript-eslint/parser": "^4.26.1",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
@@ -113,6 +113,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@patternfly/react-charts": "^6.14.29",
     "@patternfly/react-core": "^4.115.2",
     "@patternfly/react-icons": "^4.10.11",
     "@patternfly/react-styles": "^4.10.2",
@@ -124,9 +125,9 @@
     "history": "5.0.0",
     "keycloak-js": "13.0.1",
     "lodash": "^4.17.21",
-    "process": "^0.11.10",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
+    "process": "^0.11.10",
     "qs": "^6.10.1",
     "react-keycloak": "^6.1.1",
     "react-router-dom": "^5.2.0",
