--- a/package.json
+++ b/package.json
@@ -152,5 +152,10 @@
     "excludeRegExp": [
       "Data/Store/ServiceInstancesSlice.ts"
     ]
-  }
+  },
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 Firefox versions",
+    "last 2 Edge versions"
+  ]
 }
