--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
   "browserslist": [
     "last 2 Chrome versions",
     "last 2 Firefox versions",
-    "last 2 Edge versions"
+    "last 2 Edge versions",
+    "last 2 Safari versions"
   ]
 }
