--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/styled-components": "^5.1.12",
     "@types/victory": "^33.1.5",
     "@types/webpack": "^5.28.0",
+    "@types/xml-formatter": "^2.1.1",    
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "babel-loader": "^8.2.2",
@@ -134,7 +135,8 @@
     "react-keycloak": "^6.1.1",
     "react-router-dom": "^5.2.0",
     "react-syntax-highlighter": "^15.4.4",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "xml-formatter": "^2.4.0"
   },
   "resolutions": {
     "terser-webpack-plugin": "^1.4.5",
