--- a/changelogs/unreleased/add-open-pull-requests-limit.yml
+++ b/changelogs/unreleased/add-open-pull-requests-limit.yml
@@ -1,4 +1,5 @@
 ---
 description: Added `open-pull-requests-limit` to Dependabot config to prevent merge conflicts on the package.json and yarn.lock files
+issue-nr: 1112
 change-type: patch
 destination-branches: [master]
