Add types for lodash

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/fetch-mock": "^7.3.5",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.172",
     "@types/node": "^16.7.10",
     "@types/qs": "^6.9.7",
     "@types/react": "^17.0.19",
@@ -60,7 +61,7 @@
     "@types/styled-components": "^5.1.13",
     "@types/victory": "^33.1.5",
     "@types/webpack": "^5.28.0",
-    "@types/xml-formatter": "^2.1.1",    
+    "@types/xml-formatter": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
     "babel-loader": "^8.2.2",
