change entry fix

--- a/changelogs/unreleased/fix-yml-suffix.yml
+++ b/changelogs/unreleased/fix-yml-suffix.yml
@@ -1,5 +1,5 @@
 description: Renamed invalidly suffixed change entries
 change-type: patch
-destination-branch:
+destination-branches:
   - master
   - iso4
