--- a/changelogs/unreleased/1483-configuration-tab.yml
+++ b/changelogs/unreleased/1483-configuration-tab.yml
@@ -1,4 +1,4 @@
-description: Add configuration tab to settings page
+description: Add configuration tab to settings page to allow updating environment settings
 issue-nr: 1483
 change-type: minor
 destination-branches: [master, iso4]
