Fix config and css

--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "build": "webpack --config webpack.prod.cjs",
     "start": "webpack serve --hot --color --progress --config webpack.dev.cjs",
     "test": "jest",
-    "format": "prettier --check --write './**/*.{js,jsx,ts,tsx}'",
-    "format:check": "prettier --check './**/*.{js,jsx,ts,tsx}'",
-    "lint": "eslint --max-warnings=0 './**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "eslint --max-warnings=0 './**/*.{js,jsx,ts,tsx}' --quiet --fix",
-    "build:bundle-profile": "webpack --config webpack.prod.js --profile --json > stats.json",
+    "format": "prettier --check --write './**/*.{cjs,js,jsx,ts,tsx}'",
+    "format:check": "prettier --check './**/*.{cjs,js,jsx,ts,tsx}'",
+    "lint": "eslint --max-warnings=0 './**/*.{cjs,js,jsx,ts,tsx}'",
+    "lint:fix": "eslint --max-warnings=0 './**/*.{cjs,js,jsx,ts,tsx}' --quiet --fix",
+    "build:bundle-profile": "webpack --config webpack.prod.cjs --profile --json > stats.json",
     "bundle-profile:analyze": "yarn build:bundle-profile && webpack-bundle-analyzer ./stats.json",
     "clean": "rimraf dist",
     "delete:reports": "rm -r cypress/reports/* || true",
@@ -66,8 +66,10 @@
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^4.33.0",
     "babel-loader": "^8.2.2",
+    "clean-css": "^5.2.2",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.4.0",
+    "css-minimizer-webpack-plugin": "^3.1.1",
     "cypress": "^8.6.0",
     "cypress-multi-reporters": "^1.5.0",
     "eslint": "^7.32.0",
@@ -93,7 +95,6 @@
     "mochawesome": "^6.3.1",
     "mochawesome-report-generator": "^5.2.0",
     "node-fetch": "^3.0.0",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "prettier": "^2.4.1",
     "prop-types": "^15.6.1",
     "raw-loader": "^4.0.2",
