--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "@inmanta/web-console",
   "version": "1.7.1",
   "description": "Web Console for Inmanta Orchestrator",
-  "main": "dist/index.js",
+  "exports": "./dist/index.js",
   "repository": "https://github.com/inmanta/web-console.git",
   "license": "MIT",
   "scripts": {
     "prepare": "husky install",
     "prebuild": "yarn clean",
-    "build": "webpack --config webpack.prod.js",
-    "start": "webpack serve --hot --color --progress --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.cjs",
+    "start": "webpack serve --hot --color --progress --config webpack.dev.cjs",
     "test": "jest",
-    "format": "prettier --check --write './**/*.{js,jsx,ts,tsx}'",
-    "format:check": "prettier --check './**/*.{js,jsx,ts,tsx}'",
-    "lint": "eslint --max-warnings=0 './**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "eslint --max-warnings=0 './**/*.{js,jsx,ts,tsx}' --quiet --fix",
-    "build:bundle-profile": "webpack --config webpack.prod.js --profile --json > stats.json",
+    "format": "prettier --check --write './**/*.{cjs,js,jsx,ts,tsx}'",
+    "format:check": "prettier --check './**/*.{cjs,js,jsx,ts,tsx}'",
+    "lint": "eslint --max-warnings=0 './**/*.{cjs,js,jsx,ts,tsx}'",
+    "lint:fix": "eslint --max-warnings=0 './**/*.{cjs,js,jsx,ts,tsx}' --quiet --fix",
+    "build:bundle-profile": "webpack --config webpack.prod.cjs --profile --json > stats.json",
     "bundle-profile:analyze": "yarn build:bundle-profile && webpack-bundle-analyzer ./stats.json",
     "clean": "rimraf dist",
     "delete:reports": "rm -r cypress/reports/* || true",
@@ -38,6 +38,7 @@
   "files": [
     "dist/"
   ],
+  "type": "module",
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/plugin-transform-typescript": "^7.15.8",
@@ -62,10 +63,12 @@
     "@types/victory": "^35.0.0",
     "@types/webpack": "^5.28.0",
     "@types/xml-formatter": "^2.1.1",
+    "clean-css": "^5.2.2",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-minimizer-webpack-plugin": "^3.1.1",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "babel-loader": "^8.2.3",
-    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.0",
     "cypress": "^8.7.0",
     "cypress-multi-reporters": "^1.5.0",
@@ -92,7 +95,6 @@
     "mochawesome": "^6.3.1",
     "mochawesome-report-generator": "^5.2.0",
     "node-fetch": "^3.0.0",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "prettier": "^2.4.1",
     "prop-types": "^15.6.1",
     "raw-loader": "^4.0.2",
