--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,7 @@ updates:
     # Serialize all Dependabot PRs to prevent merge conflicts
     # on the package.json and yarn.lock files
     open-pull-requests-limit: 1
+    ignore:
+      - dependency-name: "eslint"
+        # For ESLint, ignore all updates for version 8
+        versions: ["8.x"]
