Add ReactMarkown & Restructure words module

--- a/package.json
+++ b/package.json
@@ -63,13 +63,13 @@
     "@types/victory": "^35.0.0",
     "@types/webpack": "^5.28.0",
     "@types/xml-formatter": "^2.1.1",
-    "clean-css": "^5.2.2",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-minimizer-webpack-plugin": "^3.1.1",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "babel-loader": "^8.2.3",
+    "clean-css": "^5.2.2",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.0",
+    "css-minimizer-webpack-plugin": "^3.1.1",
     "cypress": "^8.7.0",
     "cypress-multi-reporters": "^1.5.0",
     "eslint": "^7.32.0",
@@ -137,6 +137,7 @@
     "process": "^0.11.10",
     "qs": "^6.10.1",
     "react-keycloak": "^6.1.1",
+    "react-markdown": "^7.1.0",
     "react-router-dom": "^5.3.0",
     "react-syntax-highlighter": "^15.4.4",
     "styled-components": "^5.3.3",
