--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web Console for Inmanta Orchestrator",
   "main": "dist/index.js",
   "repository": "https://github.com/inmanta/web-console.git",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "scripts": {
     "prebuild": "yarn clean",
     "build": "webpack --config webpack.prod.js",
