--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/fetch-mock": "^7.3.5",
+    "@types/file-saver": "^2.0.4",
     "@types/jest": "^27.0.3",
     "@types/lodash": "^4.14.177",
     "@types/node": "^16.11.10",
@@ -131,7 +132,9 @@
     "copy-to-clipboard": "^3.3.1",
     "dotenv-webpack": "^7.0.3",
     "easy-peasy": "^5.0.4",
+    "file-saver": "^2.0.5",
     "history": "5.1.0",
+    "jszip": "^3.7.1",
     "keycloak-js": "15.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
