--- a/package.json
+++ b/package.json
@@ -151,7 +151,8 @@
     "terser-webpack-plugin": "^1.4.5",
     "selfsigned": "^1.10.8",
     "immer": "^9.0.6",
-    "prismjs": "^1.25.0"
+    "prismjs": "^1.25.0",
+    "trim": "^0.0.3"
   },
   "madge": {
     "fileExtensions": [
