--- a/package.json
+++ b/package.json
@@ -153,7 +153,8 @@
     "immer": "^9.0.6",
     "prismjs": "^1.25.0",
     "trim": "^0.0.3",
-    "glob-parent": "^5.1.2"
+    "glob-parent": "^5.1.2",
+    "ansi-regex": "^5.0.1"
   },
   "madge": {
     "fileExtensions": [
