--- a/package.json
+++ b/package.json
@@ -154,7 +154,8 @@
     "prismjs": "^1.25.0",
     "trim": "^0.0.3",
     "glob-parent": "^5.1.2",
-    "ansi-regex": "^5.0.1"
+    "ansi-regex": "^5.0.1",
+    "nth-check": "^2.0.1"
   },
   "madge": {
     "fileExtensions": [
