--- a/package.json
+++ b/package.json
@@ -155,7 +155,8 @@
     "trim": "^0.0.3",
     "glob-parent": "^5.1.2",
     "ansi-regex": "^5.0.1",
-    "nth-check": "^2.0.1"
+    "nth-check": "^2.0.1",
+    "browserslist": "^4.16.5"
   },
   "madge": {
     "fileExtensions": [
