--- a/package.json
+++ b/package.json
@@ -156,7 +156,8 @@
     "glob-parent": "^5.1.2",
     "ansi-regex": "^5.0.1",
     "nth-check": "^2.0.1",
-    "browserslist": "^4.16.5"
+    "browserslist": "^4.16.5",
+    "json-schema": "^0.4.0"
   },
   "madge": {
     "fileExtensions": [
