--- a/package.json
+++ b/package.json
@@ -141,6 +141,8 @@
     "moment-timezone": "^0.5.34",
     "process": "^0.11.10",
     "qs": "^6.10.2",
+    "react-diff-view": "^2.4.9",
+    "react-diff-viewer": "^3.1.1",
     "react-keycloak": "^6.1.1",
     "react-router-dom": "^6.2.1",
     "react-syntax-highlighter": "^15.4.5",
