--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/file-saver": "^2.0.4",
     "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.178",
+    "@types/lodash-es": "^4.17.5",
     "@types/node": "^17.0.8",
     "@types/qs": "^6.9.7",
     "@types/react": "^17.0.38",
@@ -97,6 +98,8 @@
     "mocha-junit-reporter": "^2.0.2",
     "mochawesome": "^7.0.1",
     "mochawesome-report-generator": "^6.0.1",
+    "moment-locales-webpack-plugin": "^1.2.0",
+    "moment-timezone-data-webpack-plugin": "^1.5.0",
     "node-fetch": "^3.1.0",
     "prettier": "^2.5.1",
     "prop-types": "^15.8.1",
@@ -137,6 +140,7 @@
     "jszip": "^3.7.1",
     "keycloak-js": "16.1.0",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "process": "^0.11.10",
