--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "@patternfly/react-table": "^4.50.1",
     "@patternfly/react-tokens": "^4.27.4",
     "copy-to-clipboard": "^3.3.1",
+    "diff2html": "^3.4.13",
     "dotenv-webpack": "^7.0.3",
     "easy-peasy": "^5.0.4",
     "file-saver": "^2.0.5",
@@ -139,6 +140,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
+    "parse-diff": "^0.9.0",
     "process": "^0.11.10",
     "qs": "^6.10.2",
     "react-diff-view": "^2.4.9",
