--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "eslint-plugin-testing-library": "^5.0.3",
     "fetch-mock": "^9.11.0",
     "file-loader": "^6.2.0",
+    "git-revision-webpack-plugin": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "imagemin": "^8.0.1",
