--- a/package.json
+++ b/package.json
@@ -162,7 +162,8 @@
     "ansi-regex": "^5.0.1",
     "nth-check": "^2.0.1",
     "browserslist": "^4.16.5",
-    "json-schema": "^0.4.0"
+    "json-schema": "^0.4.0",
+    "node-forge": "^1.0.0"
   },
   "madge": {
     "fileExtensions": [
