--- a/changelogs/unreleased/2378-security-alerts.yml
+++ b/changelogs/unreleased/2378-security-alerts.yml
@@ -1,4 +1,4 @@
 description: Fix security alerts
 issue-nr: 2378
 change-type: patch
-destination-branches: [master, iso4]
+destination-branches: [master, iso4, iso5]
