--- a/changelogs/unreleased/2350-env-selector-fix.yml
+++ b/changelogs/unreleased/2350-env-selector-fix.yml
@@ -1,4 +1,4 @@
 description: Fix issue with environment selector being out of sync
 issue-nr: 2350
 change-type: patch
-destination-branches: [master, iso4]
+destination-branches: [master, iso4, iso5]
