--- a/changelogs/unreleased/2537-configurable-json-parser.yml
+++ b/changelogs/unreleased/2537-configurable-json-parser.yml
@@ -1,4 +1,4 @@
 description: Add configuration option for json parser
 issue-nr: 2537
 change-type: patch
-destination-branches: [master, iso4, iso5]
+destination-branches: [master, iso5]
