--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "module": "ES2020",
-    "target": "es2015",
-    "lib": ["es6", "dom", "esnext"],
+    "target": "ES2020",
+    "lib": ["ES2020", "dom"],
     "sourceMap": true,
     "jsx": "react",
     "moduleResolution": "node",
