--- a/changelogs/unreleased/2628-config-tab-scrollable.yml
+++ b/changelogs/unreleased/2628-config-tab-scrollable.yml
@@ -1,4 +1,4 @@
 description: Make config tab horizontally scrollable
 issue-nr: 2628
 change-type: patch
-destination-branches: [master, iso5]
+destination-branches: [master, iso5, iso4]
