--- a/changelogs/unreleased/2607-fix-edit-form-embedded-entities.yml
+++ b/changelogs/unreleased/2607-fix-edit-form-embedded-entities.yml
@@ -1,4 +1,4 @@
 description: Fix handling of nested embedded entities on the edit form
 issue-nr: 2607
 change-type: patch
-destination-branches: [master, iso5]
+destination-branches: [master, iso5, iso4]
