--- a/changelogs/unreleased/2622-fix-file-fetcher.yml
+++ b/changelogs/unreleased/2622-fix-file-fetcher.yml
@@ -1,4 +1,4 @@
 description: Fix file fetcher
 issue-nr: 2622
 change-type: patch
-destination-branches: [master, iso5]
+destination-branches: [iso4]
