--- a/package.json
+++ b/package.json
@@ -165,7 +165,9 @@
     "nth-check": "^2.0.1",
     "browserslist": "^4.16.5",
     "json-schema": "^0.4.0",
-    "node-forge": "^1.0.0"
+    "node-forge": "^1.0.0",
+    "cross-fetch": "^3.1.5",
+    "node-fetch": "^2.6.7"
   },
   "madge": {
     "fileExtensions": [
