--- a/changelogs/unreleased/2629-jest-test-speedup.yml
+++ b/changelogs/unreleased/2629-jest-test-speedup.yml
@@ -1,4 +1,4 @@
 description: Speed up testing with jest
 issue-nr: 2629
 change-type: patch
-destination-branches: [master, iso5, iso4]
+destination-branches: [iso4]
